gl31-master/src/test/deca/syntax/valid/complet/complex_class.deca
// Description:
//    tests de programme correct syntaxiquement pour complet
//
// Resultats:
//    Succes attendu
//
// Historique:
//    cree le 18/01/2021
class Test{
    protected float f;

    void function() {
        if(f < 0){
            printlnx(f);
        }
        else if(f == 0){
            print("nul");
        }
        else{
            println(f);
        }
    }
}
